--- a/4. React- Sheriyans Coding/1st-vite-project/package.json
+++ b/4. React- Sheriyans Coding/1st-vite-project/package.json
@@ -1,13 +1,10 @@
 {
-  "name": "1st-vite-project",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "your-project-name",
+  "version": "1.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite", 
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "serve": "vite preview"
   },
   "dependencies": {
     "react": "^18.3.1",
